--- a/userguide/content/pt-br/_index.html
+++ b/userguide/content/pt-br/_index.html
@@ -4,7 +4,7 @@ linkTitle = "Home"
 
 +++
 
-{{< blocks/cover title="Bem-vindo ao site do curso de Sequências de DNA na identificação de espécies e análise filogenética! Nova turma prevista para o segundo semestre de 2021!" image_anchor="top" height="full" color="black" >}}
+{{< blocks/cover title="Bem-vindo ao site do curso de Genômica e Genética Funcional de Microrganismos! Inscrições abertas!" image_anchor="top" height="full" color="black" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/sobre" >}}">
 		Saiba mais! <i class="fas fa-arrow-alt-circle-right ml-2"></i>
@@ -12,14 +12,14 @@ linkTitle = "Home"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/inscricoes" >}}">
 		Faça sua inscrição! <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<p class="lead mt-5">Explorando sequências de DNA para análises filogenéticas e identificação de espécies em diversas abordagens!</p>
+	<p class="lead mt-5">Empregando genética funcional e genômica para o entendimento da evolução de microrganismos e compreensão da interação entre patógenos e hospedeiros!</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
 
 
 {{% blocks/lead color="primary" %}}
-O curso de Sequências de DNA na Identificação de Espécies e Análise Filogenética é promovido e ofertado pelo Programa de Pós-Graduação em Genética e pelo Laboratório de Bioprospecção e Genética Molecular de Microrganismos, ambos localizados no Departamento de Genética da Universidade Federal do Paraná (UFPR, Curitiba, Brasil). 
+O curso de Genômica e Genética Funcional de Microrganismos é promovido e ofertado pelo Programa de Pós-Graduação em Genética e pelo Laboratório de Bioprospecção e Genética Molecular de Microrganismos, ambos localizados no Departamento de Genética da Universidade Federal do Paraná (UFPR, Curitiba, Brasil). 
 <p>
 Nosso principal objetivo é fornecer à você os conhecimentos e ferramentas necessárias para uma análise filogenética bem sucedida, e confiabilidade para a identificação de espécies nos mais diversos contextos!
 {{% /blocks/lead %}}
