Update home page

--- a/userguide/content/pt-br/_index.html
+++ b/userguide/content/pt-br/_index.html
@@ -21,21 +21,21 @@ linkTitle = "Home"
 {{% blocks/lead color="primary" %}}
 O curso de Genômica e Genética Funcional de Microrganismos é promovido e ofertado pelo Programa de Pós-Graduação em Genética e pelo Laboratório de Bioprospecção e Genética Molecular de Microrganismos, ambos localizados no Departamento de Genética da Universidade Federal do Paraná (UFPR, Curitiba, Brasil). 
 <p>
-Nosso principal objetivo é fornecer à você os conhecimentos e ferramentas necessárias para uma análise filogenética bem sucedida, e confiabilidade para a identificação de espécies nos mais diversos contextos!
+Nosso principal objetivo é fornecer à você os conhecimentos e ferramentas necessárias para empregar a genômica no estudo de microrganismos de forma confiável e bem sucedida, e segurança para realizar um estudo de genética funcional!
 {{% /blocks/lead %}}
 
 {{< blocks/section color="light" type="features">}}
-{{% blocks/feature icon="fa-dna" title="Análise de sequências de DNA!" url="/sobre" %}}
-Vamos explorar as diferentes metodologias e softwares disponíveis para obtenção, edição e análise de sequências de DNA!
+{{% blocks/feature icon="fa-laptop-code" title="Genômica!" url="/sobre" %}}
+Vamos explorar as diferentes metodologias e softwares disponíveis para sequenciamento, montagem e anotação de genomas de microrganismos com qualidade e confiabilidade!
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fa-laptop-code" title="Análise filogenética!" url="/sobre" %}}
-Da produção de alinhamentos à obtenção de árvores, vamos abordar todas as etapas para a realização de uma análise filogenética de qualidade!
+{{% blocks/feature icon="fa-dna" title="Genética funcional!" url="/sobre" %}}
+Da seleção de genes candidatos à análises de expressão gênica, vamos abordar todas as etapas para um estudo bem sucedido de genética funcional em microrganismos!
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fa-compress-arrows-alt" title="Identificação de espécies!" url="/sobre" %}}
-Aliando análises filogenéticas com sequências de DNA confiáveis, vamos explorar todos os aspectos e critérios necessários para o sucesso na identificação de espécies!
+{{% blocks/feature icon="fa-clipboard-check" title="Estudos de caso!" url="/sobre" %}}
+Compreensão da evolução e interação entre os patógenos e hospedeiros a partir de contextualização com exemplos reais durante as atividades práticas!
 {{% /blocks/feature %}}
 
 
