--- a/userguide/content/pt-br/_index.html
+++ b/userguide/content/pt-br/_index.html
@@ -21,7 +21,7 @@ linkTitle = "Home"
 {{% blocks/lead color="primary" %}}
 O curso de Genômica e Genética Funcional de Microrganismos é promovido e ofertado pelo Programa de Pós-Graduação em Genética e pelo Laboratório de Bioprospecção e Genética Molecular de Microrganismos, ambos localizados no Departamento de Genética da Universidade Federal do Paraná (UFPR, Curitiba, Brasil). 
 <p>
-Nosso principal objetivo é fornecer à você os conhecimentos e ferramentas necessárias para empregar a genômica no estudo de microrganismos de forma confiável e bem sucedida, e segurança para realizar um estudo de genética funcional!
+Nosso principal objetivo é fornecer a você os conhecimentos e ferramentas necessárias para empregar a genômica no estudo de microrganismos de forma confiável e bem sucedida, e segurança para realizar um estudo de genética funcional!
 {{% /blocks/lead %}}
 
 {{< blocks/section color="light" type="features">}}
@@ -31,7 +31,7 @@ Vamos explorar as diferentes metodologias e softwares disponíveis para sequenci
 
 
 {{% blocks/feature icon="fa-dna" title="Genética funcional!" url="/sobre" %}}
-Da seleção de genes candidatos à análises de expressão gênica, vamos abordar todas as etapas para um estudo bem sucedido de genética funcional em microrganismos!
+Da seleção de genes candidatos às análises de expressão gênica, vamos abordar todas as etapas para um estudo bem-sucedido de genética funcional em microrganismos!
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fa-clipboard-check" title="Estudos de caso!" url="/sobre" %}}
