--- a/userguide/content/pt-br/_index.html
+++ b/userguide/content/pt-br/_index.html
@@ -21,7 +21,7 @@ linkTitle = "Home"
 {{% blocks/lead color="primary" %}}
 O curso de Genômica e Genética Funcional de Microrganismos é promovido e ofertado pelo Programa de Pós-Graduação em Genética e pelo Laboratório de Bioprospecção e Genética Molecular de Microrganismos, ambos localizados no Departamento de Genética da Universidade Federal do Paraná (UFPR, Curitiba, Brasil). 
 <p>
-Nosso principal objetivo é fornecer a você os conhecimentos e ferramentas necessárias para empregar a genômica no estudo de microrganismos de forma confiável e bem sucedida, e segurança para realizar um estudo de genética funcional!
+Nosso principal objetivo é fornecer a você os conhecimentos e ferramentas necessários para empregar a genômica no estudo de microrganismos de forma confiável e bem sucedida, e segurança para realizar um estudo de genética funcional!
 {{% /blocks/lead %}}
 
 {{< blocks/section color="light" type="features">}}
